--- a/responsive.css
+++ b/responsive.css
@@ -1,17 +1,19 @@
 @media screen and (max-width: 1510px) {
-    .service-card-wrap {
+    #services-section .service-card-wrap {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
+        margin-left: 28px;
+        width: 90%;
     }
 
-    .service-image-wrap {
+    #services-section .service-image-wrap {
         width: 100%;
         height: 20rem;
     }
 
-    .service-image-text {
+    #services-section .service-image-text {
         top: 50%;
         left: 2rem;
         width: 460px;
@@ -601,7 +603,7 @@
 @media screen and (max-width: 764px) {
     .hot-deals .section-wrap {
         padding: 2rem 4rem;
-    }
+    }  
 }
 
 @media screen and (max-width: 760px) {
@@ -793,11 +795,11 @@
 }
 
 @media screen and (max-width: 640px) {
-    .service-image-wrap {
+    #services-section .service-image-wrap {
         height: 34rem;
     }
 
-    .service-image-text {
+    #services-section .service-image-text {
         top: 50%;
         left: 50%;
         width: 90%;
@@ -1182,7 +1184,7 @@
         height: 280px;
     }
 
-    .service-image-text h1 {
+    #services-section .service-image-text h1 {
         font-size: 2.2rem;
     }
 
