--- a/style.css
+++ b/style.css
@@ -872,4 +872,104 @@ body {
 /* ---------------------------COMING SOON BIG OFFER SECTION START--------------------------- */
 /* ---------------------------COMING SOON BIG OFFER SECTION START--------------------------- */
 /* ---------------------------COMING SOON BIG OFFER SECTION START--------------------------- */
+#big-offer-soon-section {
+    margin-top: 120px;
+}
+#big-offer-soon-section .hot-deals {
+    height: 600px;
+    background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/background/timer-bg.jpg');
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), 
+    to(rgba(0, 0, 0, 0.7))), url('img/background/timer-bg.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/background/timer-bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+#big-offer-soon-section .hot-deals .section-wrap {
+    padding: 2rem 8rem;
+}
+#big-offer-soon-section .hot-deals .hot-deals-title {
+    margin-top: 1.4rem;
+    width: 100%;
+}
+#big-offer-soon-section .hot-deals .hot-deals-title h1 {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    text-shadow: 0.2rem 0.2rem 1rem black;
+    font-weight: bold;
+    font-family: 'Work Sans', sans-serif;
+}
+#big-offer-soon-section .hot-deals .countdown-wrap {
+    margin-top: 7rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    width: 100%;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+#big-offer-soon-section .countdown-wrap .timer {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+#big-offer-soon-section .countdown-wrap .timer .timer-bg {
+    height: 220px;
+    width: 220px;
+    background: rgba(255, 255, 255, 0.05);
+    -webkit-backdrop-filter: blur(2rem);
+    backdrop-filter: blur(2rem);
+    border: 3px solid white;
+    background-size: cover;
+    background-position: center;
+    border-radius: 0.2rem;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+#big-offer-soon-section .countdown-wrap .timer .counter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+#big-offer-soon-section .countdown-wrap .timer .counter h1 {
+    color: white;
+    font-size: 4.6rem;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Work Sans', sans-serif;
+}
+#big-offer-soon-section .countdown-wrap .timer .counter p {
+    color: white;
+    font-size: 1.4rem;
+    text-align: center;
+    font-weight: 500;
+}
+/* ---------------------------COMING SOON BIG OFFER SECTION END--------------------------- */
+/* ---------------------------COMING SOON BIG OFFER SECTION END--------------------------- */
+/* ---------------------------COMING SOON BIG OFFER SECTION END--------------------------- */
 
+
+
+
+/* ---------------------------GREAT DEALS SECTION START--------------------------- */
+/* ---------------------------GREAT DEALS SECTION START--------------------------- */
+/* ---------------------------GREAT DEALS SECTION START--------------------------- */
