--- a/responsive.css
+++ b/responsive.css
@@ -481,12 +481,12 @@
         width: 18rem;
     }
 
-    .countdown-wrap .timer .timer-bg {
+    #big-offer-soon-section .countdown-wrap .timer .timer-bg {
         height: 190px;
         width: 190px;
     }
 
-    .countdown-wrap .timer {
+    #big-offer-soon-section .countdown-wrap .timer {
         margin: 2rem;
     }
 
@@ -678,6 +678,9 @@
         position: absolute;
         margin-left: 220px;
         margin-top: 12px;
+    }
+    #great-deals-section .great-deals-product-wrap {
+        margin-top: 100px;
     }
 }
 
@@ -1107,26 +1110,26 @@
         width: 98%;
     }
 
-    .great-deals-timer .gd-timer {
+    #great-deals-section .great-deals-timer .gd-timer {
         height: 78px;
         width: 78px;
     }
 
-    .gd-timer>div>p {
+    #great-deals-section .gd-timer > div > p {
         font-size: 1.1rem;
     }
 
-    .gd-rating-box p strong {
+    #great-deals-section .gd-rating-box p strong {
         font-size: 1.4rem;
     }
 
-    .gd-button button {
+    #great-deals-section .gd-button button {
         font-size: 1.1rem;
         height: 2.4rem;
         width: 6rem;
     }
 
-    .gd-rating-and-action {
+    #great-deals-section .gd-rating-and-action {
         margin-top: 0.8rem;
     }
 
@@ -1368,12 +1371,12 @@
 }
 
 @media screen and (max-width: 370px) {
-    .great-deals-timer .gd-timer {
+    #great-deals-section .great-deals-timer .gd-timer {
         height: 75px;
         width: 75px;
     }
 
-    .gd-timer>div>p {
+    #great-deals-section .gd-timer > div > p {
         font-size: 1rem;
     }
 
